test/bad/10-int-out-of-bounds.mac



int main() {
    //always return an error about int too big 
    // as it checks 9223372036854775809
    // and not -9223372036854775809
    // this also means that this wont
    // work on architectures where
    // -int_min > int_max and will instead loop
    //  the value round
    // I don't see an easy way to account for this with the current
    // architecture
    return -9223372036854775809;
}